[metadata]
name = sashay
version = attr: sashay.__version__
url = https://github.com/scalabli/sashay
project_urls =
    Donate = https://ko-fi.com/scalabli
    Documentation = https://github.com/scalabli/sashay
    Changes = https://github.com/scalabli/sashay
    Source Code = https://github.com/scalabli/sashay
    Issue Tracker = https://github.com/scalabli/sashay/issues/
    Twitter = https://twitter.com/scalabli
    Chat = https://gitter.im/scalabli
license = MIT
license_files = LICENSE
author = Gerrishon Sirere
author_email = scalabli@pm.me
maintainer = Scalabli.
maintainer_email = scalabli@pm.me
description = All in one automatic installer for useful tools
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir = = src
include_package_data = true
#package_data={'sashay': ['assets/cat.json']}
python_requires = >= 3.8
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  sashay = sashay.menu:Main.menu
  sshy = sashay.menu:Main.menu
[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = true
source =
    sashay
    tests

[coverage:paths]
source =
    sashay
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions,
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ module exports names
    src/sashay/__init__.py: F401

[mypy]
files = src/sashay
python_version = 3.8
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

[mypy-colorama.*]
ignore_missing_imports = True

[mypy-pygments.*]
ignore_missing_imports = True
# [mypy-importlib_metadata.*]
# ignore_missing_imports = True
